# rdict

./: .gitignore  Cargo.toml  README.md
src/: args.rs  handler.rs  main.rs  meta.rs  progressbar.rs  query.rs  result.rs  util.rs
src/handler/: youdao.rs
