[package]
name = "rdict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.9", features= ["blocking", "json"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.53"
url = "2.2.2"
indicatif = "0.16.2"
colored = "2.0.0"
clap = {version = "3.1.2", features = ["derive"]}
