[package]
name = "rdict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# opt-level = 'z'
# panic = "abort"

[dev-dependencies]
serial_test = "*"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
indicatif = "0.16.2"
colored = "2.0.0"
clap = {version = "3.1.2", features = ["derive"]}
sled = "0.34.7"
ureq = {version = "2.4.0", features = ["json"]}
dirs = "4.0.0"
